# pdf_to_text

./: README.md  help  main.py  pdf_to_text.py  pyproject.toml  requirements.txt
docs/: AP - PAMELA MADEIRA MARQUES - ARGO.pdf.txt  APOLICE - GISELLY GOMES CARVALHO.pdf.txt  Capturar.PNG.txt  dataset.csv  download (1).jfif  download.jfif  images.jfif  output  teste.ipynb  teste.txt.txt
src/: pdf_to_text.py
src/controller/: pdf_to_text_controller.py
src/model/: process_object.py
src/services/file/: pdf_to_image_service.py
src/services/ocr/: ocr_text_formater_service.py  ocr_text_formatter_service.py
src/services/ocr/ocr_adapters/: abstract_ocr_adapter.py  easyocr_adapter.py
src/utils/file/: file_utils.py
src/utils/file/adapters/: filetype_adapter.py  pdf2image_adapter.py
src/utils/log/: log_utils.py
